tests/codeGen/should_compile/T12115.hs
{-# LANGUAGE MagicHash, UnboxedTuples #-}

module T12115 where

import GHC.Exts
import GHC.Types

f :: (# (# #), (# #) #) -> String
f = f
